tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__variable_get-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"name_1_\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                VariableGet(
                    Variable(
                        "name_1_",
                    ),
                ),
            ),
        ),
    ],
)
