tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__variable_get-5.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"_var\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                VariableGet(
                    Variable(
                        "_var",
                    ),
                ),
            ),
        ),
    ],
)
