tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__variable_get.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"name\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                VariableGet(
                    Variable(
                        "name",
                    ),
                ),
            ),
        ),
    ],
)
