tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__whitespace-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"  0\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Number(
                    0.0,
                ),
            ),
        ),
    ],
)
